# technova-attrition

./: .gitignore  README.md  pyproject.toml
OLD/: 01_dummy_model.py  02_Regression_logistique.py  03_Random_Forest.py  04_XGBoost.py  05_Catboost.py  test.py
Z_OLD/: 01_dummy_model.py  03_Random_Forest.py  04_XGBoost.py  run_error_analysis_newfe.py
Z_OLD/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
analytics/EDA/: 02_eda_analyse_globale.ipynb
analytics/experiments/: 91_compare_models.py  experiments.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/tmp/: cat_feature_index.20b71cc2-6613fd6b-8618c44f-57033a32.tmp  (+4 more)
model/: catboost_model.py  dummy_classifier_model.py  logistic_regression_model.py  xgboost_model.py
models/: catboost_model.py  knn_model.py  lightgbm_model.py  logistic_regression_model.py  random_forest_model.py  svc_model.py  xgboost_model.py
notebook/: 01-EDA.ipynb
notebooks/: 01_eda_analyse_table_par_table.ipynb  02_eda_analyse_globale.ipynb
reports/: restitution_outline.md
scripts/: load_csv_to_postgres.py  run_ablation.py  run_error_analysis.py  run_error_analysis_newfe.py  run_experiment.py  run_final_interpretability.py  run_final_tuning.py  run_final_tuning_newfe.py  run_load_csv_to_postgres.py
src/: analyse_bivariee.py  distrib_pred_type.py  outliers.py  outliers_treatment.py
tests/: run_final_model_demo.py  test.py  test_split_data.py  test_training_smoke.py  tests_proprocessing.py
(+30 files in other folders)
